// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Quote Slice with basic props 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  text-align: center;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c8 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #FFFFFF;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8:focus-visible {
  background-color: #E1E2E3;
  outline-offset: 3px;
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c10 {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 2rem 1rem 2rem;
  background-color: #13767C;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex: 1 1 auto;
  height: 75vh;
  min-height: 600px;
  max-height: 750px;
  max-width: 1500px;
  border-radius: 1rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 1rem;
  background: #E1E2E3;
  overflow: hidden;
  z-index: 1;
}

.c3 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  z-index: 2;
  padding: 2rem;
}

.c5 {
  margin-bottom: 0;
  max-width: 40rem;
  line-height: 1;
  text-align: center;
  text-wrap: balance;
  --ratio: 1;
  font-size: clamp(1.5rem,calc(var(--ratio) * 3rem),3rem);
}

.c7 {
  white-space: pre-wrap;
}

.c9 {
  width: auto;
}

@media (min-width: 740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c8 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    font-size: clamp(2rem,calc(var(--ratio) * 3.5rem),3.5rem);
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: clamp(2rem,calc(var(--ratio) * 6rem),6rem);
  }
}

<div
  backgroundColour="teal_dark"
  className="c0"
  paddingBottom="2rem"
  paddingTop="2rem"
  textColour="white"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    >
      <h2
        className="c4 c5"
        ratio={1}
      >
        Heading
      </h2>
      <span
        className="c6 c7"
      >
        Body text
      </span>
      <a
        buttonType="primary"
        className="c8 c9"
        color="white"
        fullWidth={false}
        home={false}
        href="http://www.google.com"
        iconFirst={false}
        mobileColour={null}
        target="_blank"
        type="button"
        underline={true}
      >
        An external link
        <span
          className="c10"
        >
          (opens in new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders an empty Quote Slice with no options set 1`] = `
.c0 {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 2rem 1rem 2rem;
  background-color: #13767C;
  color: #FFFFFF;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex: 1 1 auto;
  height: 75vh;
  min-height: 600px;
  max-height: 750px;
  max-width: 1500px;
  border-radius: 1rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 1rem;
  background: #E1E2E3;
  overflow: hidden;
  z-index: 1;
}

.c3 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  z-index: 2;
  padding: 2rem;
}

@media (min-width: 740px) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<div
  backgroundColour="teal_dark"
  className="c0"
  paddingBottom="2rem"
  paddingTop="2rem"
  textColour="white"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    />
  </div>
</div>
`;
